--- a/provisions/main.yml
+++ b/provisions/main.yml
@@ -2,7 +2,7 @@
 
 - hosts: all
   user: vagrant
-  sudo: True
+  sudo: true
 
   # vars:
   #   PORT_NUM: 6543
@@ -15,31 +15,34 @@
       apt: update_cache=yes upgrade=dist
       tags:
         - apt
+## sudo apt-get install nginx-full php5-fpm php5-cli php5-mcrypt php5-mysql mysql-server dnsmasq
 
   #   # combined install of these packages as vagrant reconnects for each task (this should speed things up!)
     - name: install dev pkgs / EMP stack
       apt: pkg=$item
       with_items:
-        - build-essential
-        - python-dev
-        - libevent-dev
-        - python-pip
-        - python-apt
-        - python-setuptools
+        # - build-essential
+        # - linux-generic 
+        # - python-dev
+        # - libevent-dev
+        # - python-pip
+        # - python-apt
+        # - python-setuptools
         - curl
         - vim
         - git-core
-        - nginx
-        - mysql-server
-        - mysql-client
-        - php5
-        - php5-cgi
-        - php5-fpm 
+        - nginx-full
+        - php5-fpm
+        - php5-cli
+        - php5-mcrypt
         - php5-mysql
+        - mysql-server
+        # - dnsmasq
       tags:
         - apt
         - mysql
         - nginx
+        - php
 
     # - name: install mysql/nginx/php (EMP stack)
     #   apt: pkg=$item
@@ -53,17 +56,43 @@
     #     - mysql
     #     - nginx
 
-    - name: pip install stuff
-      pip: name=$item
-      with_items:
-         - distribute
-         - virtualenv
+    # - name: pip install stuff
+    #   pip: name=$item
+    #   with_items:
+    #      - distribute
+    #      - virtualenv
          # - ansible
 
     # - name: configure nginx default
-    #   template: src=nginx-conf/default.j2 dest=/etc/nginx/sites-available/default
+    #   template: src=configs/nginx-conf/default.j2 dest=/etc/nginx/sites-available/default
     #   tags:
     #     - nginx
+
+    - name: install mysql
+      action: shell mysql_secure_installation sudo=true
+      tags:
+        - mysql
+
+
+    - name: set up working directory
+      action: shell mkdir -p /var/www/$(whoami)/{conf,log,testsite.dev/public} sudo=true
+      tags:
+        - mysql
+
+
+    - name: set up php-fpm
+      action: shell cp /etc/php5/fpm/pool.d/www.conf /var/www/$(whoami)/conf/php5-fpm-pool.conf sudo=true
+      action: shell mv /etc/php5/fpm/pool.d/www.conf /etc/php5/fpm/pool.d/www.conf.off sudo=true
+      action: shell ln -s /var/www/$(whoami)/conf/php5-fpm-pool.conf /etc/php5/fpm/pool.d/$(whoami).conf
+      tags:
+        - php-fpm
+
+
+    # - name: install mysql
+    #   action: shell mysql_secure_installation sudo=true
+    #   tags:
+    #     - mysql
+
 
     - name: restart nginx
       service: name=nginx state=restarted
