gpl3 license added

--- a/provisions/main.yml
+++ b/provisions/main.yml
@@ -105,7 +105,7 @@
         - pomander
 
 
-# ### VirtualBox - http://www.virtualbox.org
+# # VirtualBox - http://www.virtualbox.org
 # # Run this command: wget -q http://download.virtualbox.org/virtualbox/debian/oracle_vbox.asc -O- | sudo apt-key add -
 # deb http://download.virtualbox.org/virtualbox/debian precise contrib
 
