--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-# ignore .vagrant folder, as it is auto-generated, and will cause problems when cloning on multiple systems
+# ignore .vagrant folder, as it is auto-generated
 
 .vagrant
