Revert "added vagrant_ansible_inventory to .gitignore" reverting because php is generating the input file specified error This reverts commit 1e626b0e03cd69d622d889cfe1bcee464f6612de.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# ignore these, as they are auto-generated
+# ignore .vagrant folder, as it is auto-generated
 
 .vagrant
-vagrant_ansible_inventory_default
