--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 # ignore .vagrant folder, as it is auto-generated
-
 .vagrant
+vhosts/custom.roadsideweb.dev/public_html/wp-content/uploads
+
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
