push updates from zippy5, if 11.22.33.44 is set in hosts file you can now load the vm under http://custom.roadsideweb.dev

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # ignore .vagrant folder, as it is auto-generated
 .vagrant
+vagrant_ansible_inventory_default
+
 vhosts/custom.roadsideweb.dev/public_html/wp-content/uploads
 
 
