--- a/provisions/main.yml
+++ b/provisions/main.yml
@@ -40,7 +40,7 @@
         - curl
         - vim
         - htop
-        - git-core
+        - git
         - mysql-server
         - mysql-client
         - python-apt
